# REST-api-service

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/checker/: Checker.cpp  Checker.hpp
core/database/: Database.cpp  Database.hpp
core/datebase/: Database.cpp  Database.hpp
core/details/: Item.hpp  Request.hpp  Response.hpp
core/handler/: Handler.cpp  Handler.hpp
core/parser/: Parser.cpp  Parser.hpp
core/server/: Server.cpp  Server.hpp
service/: CMakeLists.txt  example.cpp  service.cpp
